--- a/.github/workflows/twrp-compiler.yml
+++ b/.github/workflows/twrp-compiler.yml
@@ -5,14 +5,15 @@ on: [push]
 jobs:
   build:
 
-    runs-on: zycromerz/kerneldocker:v2
+    runs-on: ubuntu-latest
+  
+    container: 
+      image: zycromerz/kerneldocker:v2
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
       run: |
-        ls
-        chmod a+x do-now.sh
-        bash do-now.sh
+        echo "nothing"
